--- a/src/Components/Navbar/NavComponents/DropDownComponents/scss/profiledrop.module.scss
+++ b/src/Components/Navbar/NavComponents/DropDownComponents/scss/profiledrop.module.scss
@@ -99,7 +99,7 @@
         justify-content: flex-start;
         flex-flow: column nowrap;
         font-size: 1.4em;
-        overflow-y: scroll;
+        overflow-y: auto;
         overflow-x: hidden;
 
 
